Seção de Estratégias

--- a/chitchat-readME.tex
+++ b/chitchat-readME.tex
@@ -38,7 +38,10 @@
 \label{introducao}
 \input{readme-pt}
 
+\section{Estratégias Utilizadas}
+
+
 \bibliographystyle{apalike}
-\bibliography{\generalbib,\bookbib,\eliasbib,sample}
+\bibliography{\generalbib,\bookbib,\eliasbib}
 
 \end{document}
